<resources>
    <string name="app_name">MoviesTMDB</string>

    <!--tab layout like youtube-->
    <string name="recommended">Recommended</string>
    <string name="trending">Trending</string>
    <string name="music">Music</string>
    <string name="comedy">Comedy</string>

    <string name="browser_header_1">Now Playing</string>
    <string name="browser_header_2">Top Rated</string>
    <string name="browser_header_3">Popular</string>
    <string name="browser_header_4">Upcoming</string>
    <string name="browser_header_5">Setting</string>
    <string name="browser_header_6">More sample</string>

    <string name="header_text_options">Options</string>

    <!--error-->
    <string name="title_oops">Oops</string>
    <string name="title_no_videos">No videos</string>
    <string name="message_try_again">Try again?</string>
    <string name="message_check_again">Check again?</string>
    <string name="text_close">Close</string>
    <string name="error_message_loading_more_posts">Sorry, there was an error loading more posts
    </string>
    <string name="error_message_network_needed">Oops, you need a network connection to do that!</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>

    <string name="text_error_oops_title">Oops</string>
    <string name="error_message_network_needed_app">Oops, you need a network connection to use Vineyard!</string>

    <!--details fragment-->
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="related_movies">Related Videos</string>

    <!--search-->
    <string name="text_search_results">Search results</string>
    <string name="text_search_tags">Tag</string>
    <string name="text_no_results">No results</string>

    <!-- Strings related to onboarding -->
    <string name="onboarding_title_welcome">Welcome to the Leanback Sample</string>
    <string name="onboarding_title_design">Designed for Android TV</string>
    <string name="onboarding_title_simple">Simple to include</string>
    <string name="onboarding_title_project">Check out the Sample Project</string>

    <!--page description-->
    <string name="onboarding_description_welcome">This is the Onboarding Fragment, which runs when the user first opens the app</string>
    <string name="onboarding_description_design">The Leanback sample shows how to quickly design apps designed for a 10-foot user interface</string>
    <string name="onboarding_description_simple">You can include the Leanback library through gradle in your own apps</string>
    <string name="onboarding_description_project">Are you looking for guidance? This sample is available on GitHub so you can see how we built this.</string>

    <!--  pin poses -->
    <string name="pin_path_1">M412.7,238.9C381,238.9 356.8,261.8 356.8,294.6C356.8,329.7 407.7,408.7 409.2,408.8C410.7,408.9 469.4,328.1 469.4,294.6C469.4,261.8 444.5,238.9 412.7,238.9ZM412.7,324.3C397.2,324.3 384.7,311.3 384.7,295.3C384.7,279.3 397.2,266.3 412.7,266.3C428.2,266.3 440.8,279.3 440.8,295.3C440.8,311.3 428.2,324.3 412.7,324.3Z</string>
    <string name="pin_path_5">M406.7,247.6C374.9,247.6 350.4,270.5 350.4,303.4C350.4,335.9 406.9,400.5 406.1,408.7C416,408.7 463.4,339.3 463.4,303.4C463.4,270.5 438.4,247.6 406.7,247.6ZM406.7,329.7C391.2,329.7 378.6,317.5 378.6,302.4C378.6,287.2 391.2,275 406.7,275C422.2,275 434.8,287.2 434.8,302.4C434.8,317.5 422.2,329.7 406.7,329.7Z</string>
    <string name="pin_path_9">M414.2,238.1C382.4,238.1 357.9,261 357.9,293.8C357.9,326.3 402.5,408.3 403.9,408.3C405.3,408.3 471.4,330.5 471.4,293.8C471.4,261 445.9,238.1 414.2,238.1ZM414.2,323.8C398.7,323.8 386.1,310.7 386.1,294.6C386.1,278.5 398.7,265.4 414.2,265.4C429.7,265.4 442.3,278.5 442.3,294.6C442.3,310.7 429.7,323.8 414.2,323.8Z</string>
    <string name="pin_path_13">M411.5,270.7C375.4,270.7 354.7,289.4 354.7,322.3C354.7,341 392.2,409.6 402.3,409.6C415.5,409.6 468.3,350.4 468.3,322.3C468.3,289.4 439.4,270.7 411.5,270.7ZM411.5,345.4C396,345.4 382.2,333.7 382.2,320C382.2,306.4 393.6,294 411.5,295.9C428.7,297.7 440.3,308 440.3,321.7C440.3,335.3 429.6,345.4 411.5,345.4Z</string>
    <string name="pin_path_19">M452.8,211C418,208.7 398,240.4 398,253.2C398,298.3 401.3,343.7 384.1,360.4C465,355.9 508.3,297.4 508.3,269.2C508.3,230.3 477.4,212.7 452.8,211ZM452.5,297C431.6,297 423.8,275.7 423.8,262C423.8,248.4 439.3,236.3 452.8,236.3C466.2,236.3 481.6,248.4 481.6,262C481.6,275.7 473.4,297 452.5,297Z</string>

    <!--more sample-->
    <string name="grid_view">Vertical Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>


    <!-- Strings related to guided sequence activity -->
    <string name="guidedstep_first_title">Guided step</string>
    <string name="guidedstep_first_description">Huỳnh Đức Thanh Phong</string>
    <string name="guidedstep_first_breadcrumb">Guided Steps: 1</string>
    <string name="guidedstep_second_title">Guided Step Second Page</string>
    <string name="guidedstep_second_description">Showcasing different action configurations</string>
    <string name="guidedstep_second_breadcrumb">Guided Steps: 2</string>
    <string name="guidedstep_third_title">Guided Step Third Page</string>
    <string name="guidedstep_third_breadcrumb">Guided Steps: 3</string>
    <string name="guidedstep_third_command">You chose: </string>
    <string name="guidedstep_action_description">The description can be quite long as well.
        Just be sure to set multilineDescription to true in the GuidedAction.
    </string>
    <string name="guidedstep_action_title">
        Note that Guided Actions can have titles that are quite long.
    </string>
    <string name="guidedstep_continue">Continue</string>
    <string name="guidedstep_letsdoit">Let\'s do it</string>
    <string name="guidedstep_nevermind">Never mind</string>
    <string name="guidedstep_cancel">Cancel</string>

    <!--pref-->
    <string name="pref_title_settings">App Settings</string>
    <string name="pref_title_recommendations">Recommendations</string>
    <string name="pref_key_recommendations">pref_recommendations</string>
    <string name="pref_key_screen_general">general_settings</string>
    <string name="pref_title_screen_general">General Settings</string>
    <string name="pref_key_screen_signin">signin</string>
    <string name="pref_title_screen_signin">Please Login</string>
    <string name="pref_title_login_description">Please enter your username and password</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_key_login">pref_login</string>
    <string name="pref_title_login">Login</string>

    <!-- Connect Activity -->
    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>

</resources>
