<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_recommendations"
            android:title="@string/pref_title_recommendations"/>

        <Preference
            android:title="test"/>
    </PreferenceCategory>
    <Preference
        android:key="@string/pref_key_login"
        android:title="@string/pref_title_login"/>

    <PreferenceCategory
        android:title="Group 1">

        <CheckBoxPreference
            android:title="CheckBoxPreference"/>

        <!--crash when only few info here in edittextpref-->
        <!--<EditTextPreference-->
        <!--android:title="EditTextPreference"/>-->

        <EditTextPreference
            android:dialogTitle="dialogtitle"
            android:key="edittext_preference_1"
            android:summary="summary"
            android:title="EditTextPreference"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Group 2">

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:summary="summary"
            android:title="CheckBoxPreference"/>

        <DropDownPreference
            android:entries="@array/categories"
            android:entryValues="@array/categories"
            android:key="dropdown_preference"
            android:summary="summary"
            android:title="DropDownPreference"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Group 3">

        <EditTextPreference
            android:dialogTitle="dialogtitle"
            android:key="edittext_preference"
            android:summary="summary"
            android:title="EditTextPreference"/>

        <ListPreference
            android:dialogTitle="dialogtitle"
            android:entries="@array/categories"
            android:entryValues="@array/categories"
            android:key="list_preference"
            android:summary="summary"
            android:title="ListPreference"/>

        <MultiSelectListPreference
            android:dialogTitle="dialogtitle"
            android:entries="@array/categories"
            android:entryValues="@array/categories"
            android:key="multi_select_list_preference"
            android:summary="summary"
            android:title="MultiSelectListPreference"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Group 4">

        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->
        <!--step - if we dont want the checkbox appears here but want it to appear in the second page, put in PreferenceScreen-->
        <PreferenceScreen
            android:key="screen_preference"
            android:summary="has checkbox"
            android:title="PreferenceScreen">

            <!-- You can place more preferences here that will be shown on the next screen. -->

            <CheckBoxPreference
                android:key="next_screen_checkbox_preference"
                android:summary="summary"
                android:title="CheckBoxPreference"/>

        </PreferenceScreen>

        <PreferenceScreen
            android:summary="has Intent"
            android:title="PreferenceScreen">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Group 5">

        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:summary="summary"
            android:title="CheckBoxPreference"/>

        <!--step - this CheckBoxPreference is the child of other CheckBoxPreference, only if the parent checkbox is checked, the child can be checked-->
        <!-- The visual style of a child is defined by this styled theme attribute. -->
        <CheckBoxPreference
            android:dependency="parent_checkbox_preference"
            android:key="child_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="summary"
            android:title="CheckBoxPreference"/>

    </PreferenceCategory>

</PreferenceScreen>